--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@tabler/icons-react-native": "^3.18.0",
+    "easycolors": "^2.0.0",
     "react": "18.3.1",
-    "react-native": "0.75.3"
+    "react-hook-form": "^7.53.0",
+    "react-native": "0.75.3",
+    "react-native-drawer-layout": "^3.3.2",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-reanimated": "^3.15.3",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
+    "react-native-tab-view": "^3.5.2",
+    "twrnc": "^4.5.1",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
